# os-xenapi

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  Makefile  README.md  README.rst  exclusion_py3.txt  files.tar  install-devstack-xen.sh  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  dom0_functions  local.conf.sample  override-defaults  plugin.sh  settings
doc/source/: conf.py  index.rst  installation.rst  usage.rst
install/: config_devstack_domu_vm.sh  create_VM_template.sh  create_ubuntu_template.sh  functions-common  install-devstack-xen.sh  install_devstack_domu.sh  install_on_xen_host.sh  install_os_domU.sh  launch_devstack.sh  local.conf  local.conf.sample  save_networks_conf.sh  xenrc
install/common/: functions
install/conf/: xenrc
install/devstack/: install_devstack.sh
install/scripts/: install_ubuntu_template.sh  manage-vdi  persist_domU_interfaces.sh  prepare_guest_template.sh  save_networks_conf.sh
install/xen/: build_xva.sh  install_os_domU.sh  xenrc
os_xenapi/: XenAPI.py  __init__.py
os_xenapi/client/: XenAPI.py  disk_management.py  exception.py  fakeFile.py  host_agent.py  host_console.py  host_glance.py  host_ipxe.py  host_kernel.py  host_management.py  host_migration.py  host_network.py  host_partition.py  host_xenstore.py  i18n.py  objects.py  session.py  utils.py  vm_management.py
os_xenapi/cmd/: bootstrap.py  get_xenapi_facts.py
os_xenapi/dom0/: README  command.py  xenapi-plugins.spec
tools/: README.rst  install-devstack-xen.sh  install_on_xen_host.sh
(+97 files in other folders)
