[metadata]
name = os-xenapi
summary = XenAPI library for OpenStack projects
description-file =
    README.rst
author = Citrix
author-email = openstack@citrix.com
home-page = http://www.citrix.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    os_xenapi

[entry_points]
console_scripts =
    xenapi_bootstrap = os_xenapi.cmd.bootstrap:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_xenapi/locale
domain = os_xenapi

[update_catalog]
domain = os_xenapi
output_dir = os_xenapi/locale
input_file = os_xenapi/locale/os_xenapi.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_xenapi/locale/os_xenapi.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1
